# CPP_excersises

./: CMakeLists.txt  CMakeLists_json.txt  Moons.json  README.md  SolarSystem.json
include/: Moon.hpp  header.hpp
sources/: Moon.cpp  main.cpp  source.cpp  student.cpp
tests/: test.cpp
